k8s/harbor/nginx/nginx.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - name: http
      port: 80
  selector:
    name: nginx-apps
  externalIPs:
    - 172.31.21.226
