k8s/harbor/nginx/nginx.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: harbor-web
spec:
  rules:
  - host: hub.idealsoftone.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
